--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.8",
+    "swiper": "^11.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
