--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,7 +4,7 @@ services:
   development:
     build:
       context: .
-      target: development
+      target: builder
     volumes:
       - .:/app
       - /app/node_modules
