--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,14 @@
 version: "3.9"
 
 services:
-  production:
-    restart: always
+  frontend:
+    restart: unless-stopped
     build:
       context: .
-      target: production
-    ports:
-      - "80:80"
+      dockerfile: ./production.Dockerfile
+    networks:
+      - default
+
+networks:
+  default:
+    driver: bridge
