--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-VITE_BASE_URL = ______________
-VITE_CLIENT_URL =_________________________
-VITE_TOKEN_URL = _______________________________
-VITE_RENDER_URL = _______________________________
+VITE_BASE_URL=http://localhost/api/v1/
+VITE_CLIENT_URL=${VITE_BASE_URL}clients/
+VITE_RENDER_URL=http://localhost
