upd docker composes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       dockerfile: ./production.Dockerfile
     networks:
       - default
+    env_file:
+      - ./.env
 
 networks:
   default:
