--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,10 +1,11 @@
 version: "3.9"
 
 services:
-  development:
+  frontend:
     build:
       context: .
-      target: builder
+      dockerfile: ./Dockerfile
+      target: development
     volumes:
       - .:/app
       - /app/node_modules
