upd ci/cd branch name

--- a/.github/workflows/release-production.yml
+++ b/.github/workflows/release-production.yml
@@ -2,9 +2,7 @@ name: "Release to production"
 on:
   push:
     branches:
-      - develop-ci-cd
-#  release:
-#    types: [ published ]
+      - main
 
 jobs:
   Docker:
